# api/api-types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api
 
+import (
+	"github.com/google/uuid"
+)
+
 const (
 	BearerAuthScopes = "BearerAuth.Scopes"
 )
@@ -10,7 +14,7 @@ const (
 // Answer defines model for Answer.
 type Answer struct {
 	Answer     *string `json:"answer,omitempty"`
-	AnswerUUID *string `json:"answerUUID,omitempty"`
+	AnswerUUID *UUID   `json:"answerUUID,omitempty"`
 }
 
 // AnswerReceivedResponse defines model for AnswerReceivedResponse.
@@ -26,7 +30,7 @@ type AnswerRequest struct {
 // AnswerWithVotes defines model for AnswerWithVotes.
 type AnswerWithVotes struct {
 	Answer     *string     `json:"answer,omitempty"`
-	AnswerUUID *string     `json:"answerUUID,omitempty"`
+	AnswerUUID *UUID       `json:"answerUUID,omitempty"`
 	Votes      *[]VoteUser `json:"votes,omitempty"`
 }
 
@@ -35,13 +39,18 @@ type AnswersResponse struct {
 	Answers *[]Answer `json:"answers,omitempty"`
 }
 
+// BadRequestResponse defines model for BadRequestResponse.
+type BadRequestResponse struct {
+	Error *string `json:"error,omitempty"`
+}
+
 // CreateUserRequest defines model for CreateUserRequest.
 type CreateUserRequest struct {
 	Username *string `json:"username,omitempty"`
 }
 
-// ErrorResponse defines model for ErrorResponse.
-type ErrorResponse struct {
+// ForbiddenResponse defines model for ForbiddenResponse.
+type ForbiddenResponse struct {
 	Error *string `json:"error,omitempty"`
 }
 
@@ -55,6 +64,11 @@ type GameFinishedResponse struct {
 	Message *string `json:"message,omitempty"`
 }
 
+// GameNotFoundResponse defines model for GameNotFoundResponse.
+type GameNotFoundResponse struct {
+	Error *string `json:"error,omitempty"`
+}
+
 // GameStartedResponse defines model for GameStartedResponse.
 type GameStartedResponse struct {
 	Message *string `json:"message,omitempty"`
@@ -62,7 +76,7 @@ type GameStartedResponse struct {
 
 // GameStatusResponse defines model for GameStatusResponse.
 type GameStatusResponse struct {
-	GameMasterUUID *string `json:"gameMasterUUID,omitempty"`
+	GameMasterUUID *UUID `json:"gameMasterUUID,omitempty"`
 
 	// ReceivedAnswers Get the number of answers received from the players
 	ReceivedAnswers *int `json:"receivedAnswers,omitempty"`
@@ -100,7 +114,7 @@ type PlayOrderSetResponse struct {
 // PlayOrderUser defines model for PlayOrderUser.
 type PlayOrderUser struct {
 	Place    *int    `json:"place,omitempty"`
-	UserUUID *string `json:"userUUID,omitempty"`
+	UserUUID *UUID   `json:"userUUID,omitempty"`
 	Username *string `json:"username,omitempty"`
 }
 
@@ -111,28 +125,35 @@ type RevealVotesResponse struct {
 
 // SelectValidAnswersRequest defines model for SelectValidAnswersRequest.
 type SelectValidAnswersRequest struct {
-	ValidAnswers *[]string `json:"validAnswers,omitempty"`
+	ValidAnswers *[]UUID `json:"validAnswers,omitempty"`
 }
 
 // SetPlayOrderRequest defines model for SetPlayOrderRequest.
 type SetPlayOrderRequest struct {
 	PlayOrder *[]struct {
-		Place    *int    `json:"place,omitempty"`
-		UserUUID *string `json:"userUUID,omitempty"`
+		Place    *int  `json:"place,omitempty"`
+		UserUUID *UUID `json:"userUUID,omitempty"`
 	} `json:"playOrder,omitempty"`
+}
+
+// UUID defines model for UUID.
+type UUID = uuid.UUID
+
+// UnauthorizedResponse defines model for UnauthorizedResponse.
+type UnauthorizedResponse struct {
+	Error *string `json:"error,omitempty"`
 }
 
 // User defines model for User.
 type User struct {
-	UserUUID *string `json:"userUUID,omitempty"`
+	UserUUID *UUID   `json:"userUUID,omitempty"`
 	Username *string `json:"username,omitempty"`
 }
 
 // UserToken defines model for UserToken.
 type UserToken struct {
-	// UserToken Used as Bearer token for authentication
-	UserToken *string `json:"userToken,omitempty"`
-	UserUUID  *string `json:"userUUID,omitempty"`
+	UserToken *UUID `json:"userToken,omitempty"`
+	UserUUID  *UUID `json:"userUUID,omitempty"`
 }
 
 // ValidAnswersSelectedResponse defines model for ValidAnswersSelectedResponse.
@@ -147,12 +168,12 @@ type VoteRecordedResponse struct {
 
 // VoteRequest defines model for VoteRequest.
 type VoteRequest struct {
-	AnswerUUID *string `json:"answerUUID,omitempty"`
+	AnswerUUID *UUID `json:"answerUUID,omitempty"`
 }
 
 // VoteUser defines model for VoteUser.
 type VoteUser struct {
-	UserUUID *string `json:"userUUID,omitempty"`
+	UserUUID *UUID   `json:"userUUID,omitempty"`
 	Username *string `json:"username,omitempty"`
 }
 
